--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <!--    <link rel="stylesheet" href="src/css/main.css">
     <link rel="stylesheet" href="src/css/input-elements.css">-->
+    <link rel="stylesheet" href="dist/main.css">
     <title>Webpack 2 Basics</title>
 </head>
 <body>
 <h1>Let's learn Webpack 2</h1>
 <button id="secret-button">Show the Secret</button>
 <p id="secret-paragraph">You can't see this all the time</p>
-<script src="dist/bundle.js"></script>
+<h1>BASIC BABEL + SCSS WORKFLOW</h1>
+<button id="randomInt">A random Integer</button>
+<button id="randomRange">A random Integer in a Range</button>
+<p id="outputParagraph">You can't see this all the time</p>
+<script src="dist/app1-bundle.js"></script>
+<script src="dist/app2-bundle.js"></script>
 <!--<script src="src/js/dom-loader.js"></script>
 <script src="src/js/app.js"></script>-->
 </body>
