--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <!--    <link rel="stylesheet" href="src/css/main.css">
     <link rel="stylesheet" href="src/css/input-elements.css">-->
-    <link rel="stylesheet" href="dist/main.css">
+    <!--<link rel="stylesheet" href="dist/main.css">-->
     <title>Webpack 2 Basics</title>
 </head>
 <body>
@@ -15,11 +15,16 @@
 <button id="secret-button">Show the Secret</button>
 <p id="secret-paragraph">You can't see this all the time</p>
 <h1>BASIC BABEL + SCSS WORKFLOW</h1>
+<div>
+    <img src="img/webpack-tuts.jpg" alt="Webpack">
+    <img src="img/webpack1.png" alt="Webpack">
+</div>
 <button id="randomInt">A random Integer</button>
 <button id="randomRange">A random Integer in a Range</button>
 <p id="outputParagraph">You can't see this all the time</p>
-<script src="dist/app1-bundle.js"></script>
-<script src="dist/app2-bundle.js"></script>
+
+<!--<script src="dist/app1-bundle.js"></script>
+<script src="dist/app2-bundle.js"></script>-->
 <!--<script src="src/js/dom-loader.js"></script>
 <script src="src/js/app.js"></script>-->
 </body>
